# harpy

./: .gitignore  .gitmodules  404.html  7  CHANGELOG.md  README.md  bamlist  build.sh  common_options.md  commonoptions.md  config.yaml  dataformat.md  development.md  getstarted.md  haplotagdata.md  harpy  hpc.md  index.html  index.md  inputdata.md  install.md  issues.md  linked_read_data.md  llms.txt  meta.yaml  meta.yml  package-lock.json  pixi.toml  potato.pancakes  pyproject.toml  retype.yml  robots.txt  samples.groups  sitemap.xml  slim.report.json  snakemake.md  software.md  stitch.params  test.bcf  troubleshooting.md  (+2 more)
.deprecated/: _deprecated.py  align-minimap.smk  bxStats.nocov.py  bxStats.nosplit.py  demux.config.py  dockerbuild.sh  extractBXlignments.py  harpy_completion.sh  hpc.py  phase.bak.smk  plot_haplotypes  simulate_reads_haplotag.py  summarizeHaploblocks.py  writeBED.pl
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  file-filters.yml  filters.yml
Assembly/: asm.fasta.fai  genome.fasta.fai
Getting_Started/: common_options.md  inputformat.md  install.md  linked_read_data.md  reports.md  troubleshooting.md
Modules/: align.md  deconvolve.md  demultiplex copy.md  demultiplex.md  extrafiles.md  imputation.md  impute.md  index.yml  initialization.md  other.md  othermodules.md  phase.md  phasing.md  preflight.md  qc.md  qualitytrimming.md  readmapping.md  snp.md  trim.md  variantcalling.md  variants.md
Workflows/: assembly.md  convert.md  deconvolve.md  demultiplex.md  downsample.md  impute.md  metassembly.md  other.md  phase.md  preflight.md  preprocess.md  qc.md  snp.md  template.md  validate.md
blog/: feed.xml  filtering_snps.md  filteringsnps.md  index.html  linked_read_data.md  simulate_diploid.md  software_environments.md  softwareenvironments.md  sort_by_barcode.md  sv_pooling.md  svpooling.md  wgs.md
categories/: index.html
common_options/: index.html
commonoptions/: index.html
deprecated/: HaploSim.pl  ema.py  inline_to_haplotag.py  leviathan_bx_shim.py  molecule_coverage.py
development/: index.html
docs/: README.md  _navbar.md  _sidebar.md  imputation.md  index.html  index.md  initialization.md  install.md  phasing.md  qualitytrimming.md  readmapping.md  retype.yml  software.md  variantcalling.md
ema/: ema-h
getting_started/: common_options.md  inputformat.md  install.md  linked_read_data.md  reports.md  utilities.md
globalscripts/: 10xtoHaplotag.py  BC_files.py  bcFiles.py  inferSV.py  makeWindows.py  parsePhaseBlocks.py
haplotagdata/: index.html
harpy/: __init__.py  __main__.py  _cli_types.py  _cli_types_generic.py  _cli_types_params.py  _conda.py  _launch.py  _misc.py  _parsers.py  _printing.py  _validations.py  align.py  assembly.py  container.py  convert.py  deconvolve.py  demultiplex.py  diagnose.py  downsample.py  environments.py  fileparsers.py  helperfunctions.py  hpc.py  impute.py  imputeparams.py  metassembly.py  phase.py  popgroup.py  popgroups.py  preflight.py  printfunctions.py  qc.py  resume.py  simulate.py  simulate_linkedreads.py  simulate_variants.py  snp.py  stitchparams.py  sv.py  template.py  (+3 more)
hpc/: index.html
inputdata/: index.html
install/: index.html
issues/: index.html
linked_read_data/: index.html
misc/: build.sh  buildforCI.sh  buildlocal.sh  ema-h  harpy.css  harpyenv.yaml  makefile.patch  meta.yaml  remove_native.patch
reports/: reportBcftools.Rmd  reportBwaGencov.Rmd  reportBxCount.Rmd  reportBxStats.Rmd  reportEmaCount.Rmd  reportEmaGencov.Rmd  reportGencov.Rmd  reportHapCut2.Rmd  reportHapCut2.beta.Rmd  reportHapCut2.experimental.Rmd  reportImpute.Rmd  reportImputeStitch.Rmd  reportLeviathan.Rmd  reportLeviathanPop.Rmd  reportNaibr.Rmd  reportNaibrPop.Rmd  reportPreflightBam.Rmd  reportPreflightFastq.Rmd  reportStitch.Rmd
resources/: Dockerfile  build.sh  buildforCI.sh  buildlocal.sh  buildlocal2.sh  changelog.md  containerize.smk  createharpyenv.sh  dev_install_conda.sh  dev_install_pixi.sh  dockerbuild.sh  gobuild.sh  harpy.yaml  log_handler.bak.py  log_handler.py  meta.yaml  rebuild_pixi.sh  shell_completion.sh
rules/: align-bwa.smk  align-ema.smk  demultiplex.bak  demultiplex.gen1.smk  demultiplex.smk  impute.smk  map-bwa.smk  map-ema-allinone.smk  map-ema.smk  map-ema.smk.bak  phase-pop.smk  phase-sample.smk  phase-simple.smk  phase.smk  preflight-bam.smk  preflight-fastq.smk  qc.smk  testreport.smk  testrmd.smk  trim.smk  validate-fastq.smk  variantcall-leviathan-pop.smk  variantcall-leviathan.smk  variantcall-mpileup.smk  variantcall.smk  variants-freebayes.smk  variants-leviathan-pop.smk  variants-leviathan.smk  variants-mpileup.smk  variants-naibr-phase.smk  variants-naibr-pop-phase.smk  variants-naibr-pop.smk  variants-naibr.smk
snakemake/: index.html
snakemake-logger-plugin-harpyrich/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
snakemake-logger-plugin-harpyrich/demo/: Snakefile
snakemake-logger-plugin-harpyrich/demo/envs/: conda.yaml
snakemake-logger-plugin-harpyrich/src/snakemake_logger_plugin_harpyrich/: __init__.py  event_handler.py  events.py  handler.py
snakemake-logger-plugin-harpyrich/tests/: __init__.py  test_demo_workflow.py
snakemake-logger-plugin-harpyrich/tests/fixtures/: Snakefile
software/: index.html
src/: README.md
tags/: index.html
test/: positions.bed  sample1phase.bam  samples.groups  samples.groups.bad  stitch.params  stitch.params.bad  variantpos.bed
test2/: test3.R1.fq  test3.R2.fq
troubleshooting/: index.html
utilities/: BC_files.py  assignMI.py  bcftoolsreport.Rmd  bxStats.Rmd  bxStats.old.py  bxStats.py  checkBAM.py  checkFASTQ.py  countBX.py  emaCountReport.Rmd  emaInterleave  filterBXBAM.py  fixBX.py  harpy-demux  index.html  makewindows.py  moleculeSize.py  paramspace.py  parsePhaseBlocks.py  prune_haplotype.py  reportBcftools.Rmd  reportBxStats.Rmd  reportEmaCount.Rmd  reportGencov.Rmd  reportLeviathan.Rmd  reportLeviathanPop.Rmd  reportStitch.Rmd  sample_list.tsv  samples.txt  secondary2split.py  stitchReport.Rmd  stitch_impute.R  summarizeHaploblocks.py  svPopStats.Rmd  svStats.Rmd  test.R  (+3 more)
(+831 files in other folders)
