[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "harpy"
version = "4.0"
authors = [{name = "Pavel Dimens"}]
description = "An automated workflow to demultiplex sequences, trim reads, map sequences, call variants, impute genotypes, and phase haplotypes of Haplotagging data. Batteries included."
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
dependencies = [
    'beautysh',
    'click>8.0',
    'rich-click>=1.8',
    'pysam>=0.23',
    'snakemake>=9.0'
]

[project.scripts]
harpy = "harpy.__main__:cli"
hv = "harpy.commands.view:view"
harpy-utils = "harpy.utils:cli"

[project.urls]
Homepage = "https://github.com/pdimens/harpy"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test/*", ".deprecated/*", "resources/*", ".github/*"]

[tool.setuptools.package-data]
harpy = ["**/*"]

